--- a/app/src/main/res/layout/activity_notificacion.xml
+++ b/app/src/main/res/layout/activity_notificacion.xml
@@ -13,6 +13,11 @@
         android:id="@+id/nombreAukdeliver"
         android:layout_height="0dp"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/cronometro"
+        android:layout_height="0dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -381,6 +386,17 @@
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
                     android:text="Rechazar"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/redondo"
+                    android:backgroundTint="#CB4335"
+                    android:layout_height="wrap_content"/>
+                <Button
+                    android:id="@+id/btnCro"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Cro"
                     android:textColor="#fff"
                     android:textStyle="bold"
                     android:layout_marginLeft="5dp"
