--- a/app/src/main/res/layout/activity_cronometro.xml
+++ b/app/src/main/res/layout/activity_cronometro.xml
@@ -6,7 +6,12 @@
     android:gravity="center"
     android:layout_height="fill_parent"
     tools:context=".paquetes.Menus.Perfiles.Cronometro">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/text_view_countdown"
         android:layout_width="wrap_content"
@@ -28,10 +33,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_view_countdown"
-        android:layout_marginStart="11dp"
         android:layout_toEndOf="@+id/button_start_pause"
         android:text="reset"
         android:visibility="invisible"
         tools:visibility="visible" />
+    <Button
+        android:id="@+id/button_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_view_countdown"
+        android:layout_toEndOf="@+id/button_start_pause"
+        android:text="pause"
+        />
 
+</LinearLayout>
 </LinearLayout>
