--- a/app/src/main/res/layout/activity_detalle_pedido.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido.xml
@@ -319,6 +319,34 @@
 
                     </androidx.cardview.widget.CardView>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:text="Tiempo transcurrido : "
+                            android:textColor="#000"
+                            android:textSize="14sp"
+                            android:fontFamily="@font/futura"
+                            android:textStyle="bold"
+                            android:layout_marginLeft="20dp"
+                            android:layout_height="wrap_content"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:textColor="#FF0000"
+                            android:textSize="14sp"
+                            android:id="@+id/detalleTiempo"
+                            android:fontFamily="@font/futura"
+                            android:textStyle="bold"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:text="Descripción del pedido"
@@ -944,6 +972,7 @@
         android:id="@+id/linearProductos"
         android:orientation="vertical"
         android:background="#fff"
+        android:visibility="invisible"
         android:layout_height="match_parent">
 
         <com.github.florent37.shapeofview.shapes.DiagonalView
