--- a/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
@@ -338,6 +338,35 @@
 
                     </androidx.cardview.widget.CardView>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:text="Tiempo de entrega : "
+                            android:textColor="#000"
+                            android:textSize="14sp"
+                            android:fontFamily="@font/futura"
+                            android:textStyle="bold"
+                            android:layout_marginLeft="20dp"
+                            android:layout_height="wrap_content"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:textColor="#FF0000"
+                            android:textSize="14sp"
+                            android:id="@+id/detalleTiempo"
+                            android:fontFamily="@font/futura"
+                            android:textStyle="bold"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+
                     <TextView
                         android:layout_width="match_parent"
                         android:text="Descripción del pedido"
