--- a/app/src/main/res/values/categoria_comidas.xml
+++ b/app/src/main/res/values/categoria_comidas.xml
@@ -6,6 +6,7 @@
         <item>Comida Amazónica</item>
         <item>Comida Oriental</item>
         <item>Comida Rápida</item>
+        <item>Pizzas</item>
         <item>Pastelería y Repostería</item>
         <item>Menú de Casa</item>
     </string-array>
