--- a/app/src/main/res/layout/activity_menu_proveedor.xml
+++ b/app/src/main/res/layout/activity_menu_proveedor.xml
@@ -71,7 +71,30 @@
                 </LinearLayout>
             </com.facebook.shimmer.ShimmerFrameLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_below="@id/shimmer"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="Categoría : "
+                    android:id="@+id/txtTituloCat"
+                    android:textColor="#fff"
+                    android:visibility="invisible"
+                    android:fontFamily="@font/futura"
+                    android:textSize="16sp"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/txtCategoria"
+                    android:textColor="#fff"
+                    android:fontFamily="@font/futura"
+                    android:textSize="16sp"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_height="62dp"
