--- a/app/src/main/res/values/categoria_embalaje.xml
+++ b/app/src/main/res/values/categoria_embalaje.xml
@@ -5,5 +5,6 @@
         <item>Taper biodegradable</item>
         <item>Bolsa de plástico</item>
         <item>Bolsa de papel</item>
+        <item>Cartón</item>
     </string-array>
 </resources>
