--- a/app/src/main/res/layout/activity_detalle_administrador.xml
+++ b/app/src/main/res/layout/activity_detalle_administrador.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".paquetes.Actividades.Usuarios.Detalle_Administrador">
+    tools:context=".paquetes.Menus.ListaUsuarios.DetalleAdministrador">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -17,6 +17,7 @@
             app:shape_arc_cropDirection="outside"
             app:shape_arc_height="20dp"
             app:shape_arc_position="bottom">
+
             <View
                 android:layout_width="match_parent"
                 android:background="#000"
@@ -53,7 +54,7 @@
                 android:layout_width="match_parent"
                 android:background="#fff"
                 android:id="@+id/photoDetalleAdmin"
-                android:src="@drawable/lista_proveedor"
+                android:src="@drawable/lista_admin"
                 android:layout_height="match_parent"/>
         </com.github.florent37.shapeofview.shapes.CircleView>
 
