--- a/app/src/main/res/layout/activity_lista_de_administrador.xml
+++ b/app/src/main/res/layout/activity_lista_de_administrador.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".paquetes.Actividades.Usuarios.Lista_de_Administrador">
+    tools:context=".paquetes.Menus.ListaUsuarios.ListaAdministrador">
 
     <include layout="@layout/toolbar2"/>
 
